[gd_scene load_steps=26 format=2]

[ext_resource path="res://characters/enemies/werewolf/werewolf.gd" type="Script" id=1]
[ext_resource path="res://characters/enemies/werewolf/werewolf.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/werewolf/sprite.gd" type="Script" id=3]
[ext_resource path="res://lib/states/states.gd" type="Script" id=4]
[ext_resource path="res://characters/enemies/werewolf/soldier_idle.gd" type="Script" id=5]
[ext_resource path="res://characters/enemies/werewolf/transform.gd" type="Script" id=6]
[ext_resource path="res://characters/enemies/werewolf/attack.gd" type="Script" id=7]
[ext_resource path="res://characters/enemies/werewolf/wolf_idle.gd" type="Script" id=8]
[ext_resource path="res://characters/enemies/werewolf/roar.gd" type="Script" id=9]
[ext_resource path="res://characters/enemies/werewolf/attack_recovery.gd" type="Script" id=10]
[ext_resource path="res://characters/enemies/werewolf/bite.gd" type="Script" id=11]
[ext_resource path="res://sfx/howl.tscn" type="PackedScene" id=12]
[ext_resource path="res://sfx/wolf_bite.tscn" type="PackedScene" id=13]
[ext_resource path="res://sfx/wolf_transform.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=1]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 53, 54, 55, 56, 57, 58 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 46, 47, 48, 49, 50, 51, 52 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 41 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 42, 43, 44, 45 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.0

[sub_resource type="CapsuleShape2D" id=9]
height = 7.99999

[sub_resource type="CircleShape2D" id=10]
radius = 22.0227

[sub_resource type="SegmentShape2D" id=11]
a = Vector2( 2, -1 )
b = Vector2( 2, 38 )

[node name="werewolf" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 3, -28 )
texture = ExtResource( 2 )
vframes = 4
hframes = 15
frame = 44
region_enabled = true
region_rect = Rect2( 0, 0, 990, 252 )
script = ExtResource( 3 )
__meta__ = {
"anim_player_name": "anims",
"framesize_x": 66.0,
"framesize_y": 63.0
}
update = false

[node name="anims" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/AttackRecovery = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Roar = SubResource( 4 )
anims/Run = SubResource( 5 )
anims/SoldierIdle = SubResource( 6 )
anims/Transform = SubResource( 7 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( -1, -17 )
shape = SubResource( 8 )

[node name="collision2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -27 )
rotation = -1.5708
shape = SubResource( 9 )

[node name="states" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 4 )

[node name="soldier_idle" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="transform" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="attack" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="wolf_idle" type="Node" parent="states"]
script = ExtResource( 8 )

[node name="roar" type="Node" parent="states"]
script = ExtResource( 9 )

[node name="attack_recovery" type="Node" parent="states"]
script = ExtResource( 10 )

[node name="bite" type="Node" parent="states"]
script = ExtResource( 11 )

[node name="talk_position" type="Position2D" parent="."]
position = Vector2( 0, -52 )

[node name="bite_area" type="Area2D" parent="."]
position = Vector2( -24, -23 )
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="bite_area"]
position = Vector2( 3, 2 )
shape = SubResource( 10 )

[node name="howl_sfx" parent="." instance=ExtResource( 12 )]

[node name="wolf_bite" parent="." instance=ExtResource( 13 )]

[node name="wolf_transform" parent="." instance=ExtResource( 14 )]

[node name="invisible_wall" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="invisible_wall"]
position = Vector2( -2, -37 )
shape = SubResource( 11 )

